Fixed up the overflowing popups
- The popups should have a scroll when content overflows its boundaries vertically
- Take note that the print view of the main table does not show anything, but printing on the popups work as expected, this is mainly due to the fact that I have hidden everything on the main table so that the qr report can print properly
- This is acceptable since there was no real use case of someone printing from the main table given that there are data dumping mechanisms such as CSV exports and QR reports to take advantage of

--- a/report/src/components/PersonPopup.css
+++ b/report/src/components/PersonPopup.css
@@ -13,10 +13,14 @@
 
 .newPersonForm, .qrReportPopup {
   width: 80%;
+  overflow: scroll;
 }
 
 .heading {
   display: flex;
+  position: sticky;
+  top: 0;
+  background-color: gray;
 }
 
 .title {
